# agentic-rag-platform

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  start.ps1
ai-service/: .env.example  CLAUDE.md  main.py  pyproject.toml  worker.py
ai-service/core/: config.py  database.py  object_store.py  upload_limits.py
ai-service/docs/: architecture.md  getting-started.md  memory-system.md  tool-development.md
ai-service/kb_service/: api.py  es_store.py  tasks.py  worker_health.py
ai-service/kb_service/migration/: migrate_tags_to_ids.py
ai-service/kb_service/pages/: general_kb_viewer.html  test_parent_child.html  test_parent_child_v2.html
ai-service/kb_service/processing/: __init__.py  orchestrator.py  vlm_caption.py
ai-service/kb_service/processing/chunkers/: __init__.py  base.py  parent_child_chunker.py  registry.py
ai-service/kb_service/processing/common/: hierarchy_restorer.py  hybrid_converter.py  mineru_processor.py  table_flattener.py
ai-service/kb_service/processing/enhancers/: __init__.py  macro_enhancer.py
ai-service/kb_service/processing/parsers/: __init__.py  base.py  docx_parser.py  pdf_parser.py  registry.py
ai-service/kb_service/processing/storage/: __init__.py  es_writer.py
ai-service/kb_service/processing/utils/: __init__.py  progress_reporter.py  regex_shield.py  tag_generator.py  utils.py  vlm.py
ai-service/src/harness/: factory.py  llm.py  log_writer.py  prompts.py  state.py
backend/: .env.example  .gitignore  CLAUDE.md  pyproject.toml
backend/chat/: auth.py  export.py  models.py  serializers.py  services.py  urls.py  views.py
backend/chat/migrations/: 0001_initial.py  0002_initial.py  0003_alter_conversation_options_and_more.py  0004_add_user_memory.py  0005_message_feedback_detail.py  0006_add_generated_file.py
backend/dashboard/: urls.py  views.py
backend/docs/: API.md
backend/knowledge/: minio_client.py  models.py  urls.py  views.py
backend/knowledge/migrations/: 0001_initial.py  0002_remove_document_department_document_is_active_and_more.py  0003_alter_document_category_l1_and_more.py
backend/mybackend/: asgi.py  settings.py  urls.py
backend/org/: urls.py  views.py
backend/tags/: admin.py  models.py  urls.py  views.py
backend/tags/migrations/: 0001_initial.py  0002_tag_created_by.py
backend/users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_alter_user_managers_remove_user_first_name_and_more.py  0003_alter_user_phone_alter_userkbpermission_created_at.py  0004_avatar_charfield.py  0005_remove_email.py
(+103 files in other folders)
