[project]
name = "ai-service"
version = "2.0.0"
description = "AI Service - 知识库管理系统 & 智能问答服务"
authors = [
    {name = "xiaojia", email = "xiaoj.zhu@qq.com"}
]
requires-python = ">=3.12"
dependencies = [
    # ========== Web 框架 ==========
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    # ========== 数据验证 ==========
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # ========== 数据库 ==========
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    # ========== 任务队列 ==========
    "celery>=5.3.0",
    "redis>=5.0.0",
    # ========== 存储 ==========
    "elasticsearch>=8.11.0,<9.0.0",
    "minio>=7.2.0",
    # ========== AI/ML ==========
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-community>=0.0.20",
    "langgraph>=0.0.20",
    "pandas>=2.0.0",
    "numpy>=1.20.0",
    # ========== 文档处理 ==========
    "python-docx>=1.1.0",
    "python-pptx>=0.6.23",
    "pypdf>=3.17.0",
    "unstructured>=0.11.0",
    "unstructured[local-inference]>=0.11.0",
    "openpyxl>=3.1.0",
    "python-multipart>=0.0.6",
    "networkx>=3.0",
    "mammoth>=1.8.0",
    "markitdown>=0.0.1",
    "langchain-text-splitters>=0.0.1",
    # ========== HTTP 客户端 ==========
    "httpx>=0.25.0",
    "requests>=2.31.0",
    # ========== 工具库 ==========
    "python-dotenv>=1.0.0",
    "pymupdf>=1.27.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "kb_service", "qa_service", "src"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
