[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.7",
    "django>=6.0.4",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "minio>=7.2.20",
    "mysqlclient>=2.2.8",
    "openpyxl>=3.1.5",
    "pillow>=12.2.0",
    "pymysql>=1.1.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "reportlab>=4.5.0",
    "requests>=2.33.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
]
